8144483: One long Safepoint pause directly after each GC log rotation

Reviewed-by: dholmes